--- a/src/components/design/projects.module.css
+++ b/src/components/design/projects.module.css
@@ -59,7 +59,7 @@
 .project a {
     text-decoration: none;
 }
-.project:hover a {
+.project:hover .projectTitle {
     text-decoration: underline;
 }
 
@@ -84,6 +84,29 @@
 }
 .project:hover .featuredImageContainer {
     border-color: white;
+}
+
+.projectCategoriesContainer {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 10px;
+}
+
+
+.projectCategory {
+    margin-bottom: 5px;
+    margin-right: 5px;
+    display: flex;
+}
+
+
+.projectCategory div {
+    font-size: 0.8em;
+    font-family: 'Poppins';
+    color: lightgray;
+    border-radius: 5px;
+    border: 1px solid darkgray;
+    padding: 3px 6px;
 }
 
 @media (min-width: 400px) {
@@ -169,6 +192,10 @@
     }
     .projectTitle {
         padding: 0 10px;
+    }
+
+    .projectCategoriesContainer {
+        padding: 10px;
     }
 }
 
